processors/readers/parsers/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BACKSLASH
    CHAR
    HEXA
    ID
    INNERBACKSLASH
    INNERNAMEQUOTE
    INNERSTRINGQUOTE
    NAMEQUOTE
    STRINGQUOTE

Grammar

Rule 0     S' -> extended_text
Rule 1     extended_text -> texts
Rule 2     extended_text -> statements
Rule 3     extended_text -> sentences
Rule 4     texts -> text texts
Rule 5     texts -> text
Rule 6     text -> textconstruction
Rule 7     text -> domainrestriction
Rule 8     text -> importation
Rule 9     text -> commenttext
Rule 10    textconstruction -> OPEN TEXT constructed_texts CLOSE
Rule 11    constructed_texts -> constructed_text constructed_texts
Rule 12    constructed_texts -> constructed_text
Rule 13    constructed_text -> sentence
Rule 14    constructed_text -> statement
Rule 15    constructed_text -> text
Rule 16    statements -> statement statements
Rule 17    statements -> statement
Rule 18    statement -> titling
Rule 19    statement -> discoursestatement
Rule 20    statement -> OPEN COMMENT QUOTEDSTRING statement CLOSE
Rule 21    discoursestatement -> indiscourse
Rule 22    discoursestatement -> outdiscourse
Rule 23    indiscourse -> OPEN INDISCOURSE terms CLOSE
Rule 24    outdiscourse -> OPEN OUTDISCOURSE terms CLOSE
Rule 25    domainrestriction -> OPEN RESTRICT term text CLOSE
Rule 26    importation -> OPEN IMPORTS interpretablename CLOSE
Rule 27    commenttext -> OPEN COMMENT QUOTEDSTRING texts CLOSE
Rule 28    commenttext -> OPEN COMMENT QUOTEDSTRING prefixdeclarations texts CLOSE
Rule 29    prefixdeclarations -> prefixdeclaration prefixdeclarations
Rule 30    prefixdeclarations -> prefixdeclaration
Rule 31    prefixdeclaration -> OPEN PREFIX QUOTEDSTRING interpretablename CLOSE
Rule 32    titling -> OPEN TITLING interpretablename text CLOSE
Rule 33    sentence -> atomsent
Rule 34    sentence -> boolsent
Rule 35    sentence -> existential_quantsent
Rule 36    sentence -> universal_quantsent
Rule 37    sentence -> commentsent
Rule 38    atomsent -> equation
Rule 39    atomsent -> atom
Rule 40    boolsent -> and_sent
Rule 41    boolsent -> or_sent
Rule 42    boolsent -> if_sent
Rule 43    boolsent -> iff_sent
Rule 44    boolsent -> not_sent
Rule 45    and_sent -> OPEN AND sentences CLOSE
Rule 46    or_sent -> OPEN OR sentences CLOSE
Rule 47    if_sent -> OPEN IF sentence sentence CLOSE
Rule 48    iff_sent -> OPEN IFF sentence sentence CLOSE
Rule 49    not_sent -> OPEN NOT sentence CLOSE
Rule 50    commentsent -> OPEN COMMENT QUOTEDSTRING sentence CLOSE
Rule 51    sentences -> sentence sentences
Rule 52    sentences -> sentence
Rule 53    equation -> OPEN EQUAL term term CLOSE
Rule 54    atom -> OPEN term termseq CLOSE
Rule 55    universal_quantsent -> OPEN FORALL OPEN bvar_list CLOSE sentence CLOSE
Rule 56    existential_quantsent -> OPEN EXISTS OPEN bvar_list CLOSE sentence CLOSE
Rule 57    bvar_list -> bvar bvar_list
Rule 58    bvar_list -> bvar
Rule 59    bvar -> interpretablename
Rule 60    bvar -> cseqmark
Rule 61    bvar -> OPEN interpretablename term CLOSE
Rule 62    bvar -> OPEN cseqmark term CLOSE
Rule 63    terms -> term terms
Rule 64    terms -> term
Rule 65    termseq -> termseq term
Rule 66    termseq -> termseq SEQMARK
Rule 67    termseq -> term
Rule 68    termseq -> SEQMARK
Rule 69    term -> name
Rule 70    term -> OPEN term termseq CLOSE
Rule 71    term -> OPEN COMMENT QUOTEDSTRING term CLOSE
Rule 72    name -> interpretedname
Rule 73    name -> interpretablename
Rule 74    interpretedname -> NUMERAL
Rule 75    interpretedname -> QUOTEDSTRING
Rule 76    interpretedname -> OPEN COMMENT QUOTEDSTRING NUMERAL CLOSE
Rule 77    interpretedname -> OPEN COMMENT QUOTEDSTRING QUOTEDSTRING CLOSE
Rule 78    interpretablename -> NAMECHARSEQUENCE
Rule 79    interpretablename -> ENCLOSEDNAME
Rule 80    interpretablename -> OPEN COMMENT QUOTEDSTRING interpretablename CLOSE
Rule 81    cseqmark -> SEQMARK
Rule 82    cseqmark -> OPEN COMMENT QUOTEDSTRING SEQMARK CLOSE

Terminals, with rules where they appear

AND                  : 45
BACKSLASH            : 
CHAR                 : 
CLOSE                : 10 20 23 24 25 26 27 28 31 32 45 46 47 48 49 50 53 54 55 55 56 56 61 62 70 71 76 77 80 82
COMMENT              : 20 27 28 50 71 76 77 80 82
ENCLOSEDNAME         : 79
EQUAL                : 53
EXISTS               : 56
FORALL               : 55
HEXA                 : 
ID                   : 
IF                   : 47
IFF                  : 48
IMPORTS              : 26
INDISCOURSE          : 23
INNERBACKSLASH       : 
INNERNAMEQUOTE       : 
INNERSTRINGQUOTE     : 
NAMECHARSEQUENCE     : 78
NAMEQUOTE            : 
NOT                  : 49
NUMERAL              : 74 76
OPEN                 : 10 20 23 24 25 26 27 28 31 32 45 46 47 48 49 50 53 54 55 55 56 56 61 62 70 71 76 77 80 82
OR                   : 46
OUTDISCOURSE         : 24
PREFIX               : 31
QUOTEDSTRING         : 20 27 28 31 50 71 75 76 77 77 80 82
RESTRICT             : 25
SEQMARK              : 66 68 81 82
STRINGQUOTE          : 
TEXT                 : 10
TITLING              : 32
error                : 

Nonterminals, with rules where they appear

and_sent             : 40
atom                 : 39
atomsent             : 33
boolsent             : 34
bvar                 : 57 58
bvar_list            : 55 56 57
commentsent          : 37
commenttext          : 9
constructed_text     : 11 12
constructed_texts    : 10 11
cseqmark             : 60 62
discoursestatement   : 19
domainrestriction    : 7
equation             : 38
existential_quantsent : 35
extended_text        : 0
if_sent              : 42
iff_sent             : 43
importation          : 8
indiscourse          : 21
interpretablename    : 26 31 32 59 61 73 80
interpretedname      : 72
name                 : 69
not_sent             : 44
or_sent              : 41
outdiscourse         : 22
prefixdeclaration    : 29 30
prefixdeclarations   : 28 29
sentence             : 13 47 47 48 48 49 50 51 52 55 56
sentences            : 3 45 46 51
statement            : 14 16 17 20
statements           : 2 16
term                 : 25 53 53 54 61 62 63 64 65 67 70 71
terms                : 23 24 63
termseq              : 54 65 66 70
text                 : 4 5 15 25 32
textconstruction     : 6
texts                : 1 4 27 28
titling              : 18
universal_quantsent  : 36

Parsing method: LALR

state 0

    (0) S' -> . extended_text
    (1) extended_text -> . texts
    (2) extended_text -> . statements
    (3) extended_text -> . sentences
    (4) texts -> . text texts
    (5) texts -> . text
    (16) statements -> . statement statements
    (17) statements -> . statement
    (51) sentences -> . sentence sentences
    (52) sentences -> . sentence
    (6) text -> . textconstruction
    (7) text -> . domainrestriction
    (8) text -> . importation
    (9) text -> . commenttext
    (18) statement -> . titling
    (19) statement -> . discoursestatement
    (20) statement -> . OPEN COMMENT QUOTEDSTRING statement CLOSE
    (33) sentence -> . atomsent
    (34) sentence -> . boolsent
    (35) sentence -> . existential_quantsent
    (36) sentence -> . universal_quantsent
    (37) sentence -> . commentsent
    (10) textconstruction -> . OPEN TEXT constructed_texts CLOSE
    (25) domainrestriction -> . OPEN RESTRICT term text CLOSE
    (26) importation -> . OPEN IMPORTS interpretablename CLOSE
    (27) commenttext -> . OPEN COMMENT QUOTEDSTRING texts CLOSE
    (28) commenttext -> . OPEN COMMENT QUOTEDSTRING prefixdeclarations texts CLOSE
    (32) titling -> . OPEN TITLING interpretablename text CLOSE
    (21) discoursestatement -> . indiscourse
    (22) discoursestatement -> . outdiscourse
    (38) atomsent -> . equation
    (39) atomsent -> . atom
    (40) boolsent -> . and_sent
    (41) boolsent -> . or_sent
    (42) boolsent -> . if_sent
    (43) boolsent -> . iff_sent
    (44) boolsent -> . not_sent
    (56) existential_quantsent -> . OPEN EXISTS OPEN bvar_list CLOSE sentence CLOSE
    (55) universal_quantsent -> . OPEN FORALL OPEN bvar_list CLOSE sentence CLOSE
    (50) commentsent -> . OPEN COMMENT QUOTEDSTRING sentence CLOSE
    (23) indiscourse -> . OPEN INDISCOURSE terms CLOSE
    (24) outdiscourse -> . OPEN OUTDISCOURSE terms CLOSE
    (53) equation -> . OPEN EQUAL term term CLOSE
    (54) atom -> . OPEN term termseq CLOSE
    (45) and_sent -> . OPEN AND sentences CLOSE
    (46) or_sent -> . OPEN OR sentences CLOSE
    (47) if_sent -> . OPEN IF sentence sentence CLOSE
    (48) iff_sent -> . OPEN IFF sentence sentence CLOSE
    (49) not_sent -> . OPEN NOT sentence CLOSE

    OPEN            shift and go to state 14

    extended_text                  shift and go to state 1
    texts                          shift and go to state 2
    statements                     shift and go to state 3
    sentences                      shift and go to state 4
    text                           shift and go to state 5
    statement                      shift and go to state 6
    sentence                       shift and go to state 7
    textconstruction               shift and go to state 8
    domainrestriction              shift and go to state 9
    importation                    shift and go to state 10
    commenttext                    shift and go to state 11
    titling                        shift and go to state 12
    discoursestatement             shift and go to state 13
    atomsent                       shift and go to state 15
    boolsent                       shift and go to state 16
    existential_quantsent          shift and go to state 17
    universal_quantsent            shift and go to state 18
    commentsent                    shift and go to state 19
    indiscourse                    shift and go to state 20
    outdiscourse                   shift and go to state 21
    equation                       shift and go to state 22
    atom                           shift and go to state 23
    and_sent                       shift and go to state 24
    or_sent                        shift and go to state 25
    if_sent                        shift and go to state 26
    iff_sent                       shift and go to state 27
    not_sent                       shift and go to state 28

state 1

    (0) S' -> extended_text .



state 2

    (1) extended_text -> texts .

    $end            reduce using rule 1 (extended_text -> texts .)


state 3

    (2) extended_text -> statements .

    $end            reduce using rule 2 (extended_text -> statements .)


state 4

    (3) extended_text -> sentences .

    $end            reduce using rule 3 (extended_text -> sentences .)


state 5

    (4) texts -> text . texts
    (5) texts -> text .
    (4) texts -> . text texts
    (5) texts -> . text
    (6) text -> . textconstruction
    (7) text -> . domainrestriction
    (8) text -> . importation
    (9) text -> . commenttext
    (10) textconstruction -> . OPEN TEXT constructed_texts CLOSE
    (25) domainrestriction -> . OPEN RESTRICT term text CLOSE
    (26) importation -> . OPEN IMPORTS interpretablename CLOSE
    (27) commenttext -> . OPEN COMMENT QUOTEDSTRING texts CLOSE
    (28) commenttext -> . OPEN COMMENT QUOTEDSTRING prefixdeclarations texts CLOSE

    $end            reduce using rule 5 (texts -> text .)
    CLOSE           reduce using rule 5 (texts -> text .)
    OPEN            shift and go to state 30

    text                           shift and go to state 5
    texts                          shift and go to state 29
    textconstruction               shift and go to state 8
    domainrestriction              shift and go to state 9
    importation                    shift and go to state 10
    commenttext                    shift and go to state 11

state 6

    (16) statements -> statement . statements
    (17) statements -> statement .
    (16) statements -> . statement statements
    (17) statements -> . statement
    (18) statement -> . titling
    (19) statement -> . discoursestatement
    (20) statement -> . OPEN COMMENT QUOTEDSTRING statement CLOSE
    (32) titling -> . OPEN TITLING interpretablename text CLOSE
    (21) discoursestatement -> . indiscourse
    (22) discoursestatement -> . outdiscourse
    (23) indiscourse -> . OPEN INDISCOURSE terms CLOSE
    (24) outdiscourse -> . OPEN OUTDISCOURSE terms CLOSE

    $end            reduce using rule 17 (statements -> statement .)
    OPEN            shift and go to state 32

    statement                      shift and go to state 6
    statements                     shift and go to state 31
    titling                        shift and go to state 12
    discoursestatement             shift and go to state 13
    indiscourse                    shift and go to state 20
    outdiscourse                   shift and go to state 21

state 7

    (51) sentences -> sentence . sentences
    (52) sentences -> sentence .
    (51) sentences -> . sentence sentences
    (52) sentences -> . sentence
    (33) sentence -> . atomsent
    (34) sentence -> . boolsent
    (35) sentence -> . existential_quantsent
    (36) sentence -> . universal_quantsent
    (37) sentence -> . commentsent
    (38) atomsent -> . equation
    (39) atomsent -> . atom
    (40) boolsent -> . and_sent
    (41) boolsent -> . or_sent
    (42) boolsent -> . if_sent
    (43) boolsent -> . iff_sent
    (44) boolsent -> . not_sent
    (56) existential_quantsent -> . OPEN EXISTS OPEN bvar_list CLOSE sentence CLOSE
    (55) universal_quantsent -> . OPEN FORALL OPEN bvar_list CLOSE sentence CLOSE
    (50) commentsent -> . OPEN COMMENT QUOTEDSTRING sentence CLOSE
    (53) equation -> . OPEN EQUAL term term CLOSE
    (54) atom -> . OPEN term termseq CLOSE
    (45) and_sent -> . OPEN AND sentences CLOSE
    (46) or_sent -> . OPEN OR sentences CLOSE
    (47) if_sent -> . OPEN IF sentence sentence CLOSE
    (48) iff_sent -> . OPEN IFF sentence sentence CLOSE
    (49) not_sent -> . OPEN NOT sentence CLOSE

    $end            reduce using rule 52 (sentences -> sentence .)
    CLOSE           reduce using rule 52 (sentences -> sentence .)
    OPEN            shift and go to state 34

    sentence                       shift and go to state 7
    sentences                      shift and go to state 33
    atomsent                       shift and go to state 15
    boolsent                       shift and go to state 16
    existential_quantsent          shift and go to state 17
    universal_quantsent            shift and go to state 18
    commentsent                    shift and go to state 19
    equation                       shift and go to state 22
    atom                           shift and go to state 23
    and_sent                       shift and go to state 24
    or_sent                        shift and go to state 25
    if_sent                        shift and go to state 26
    iff_sent                       shift and go to state 27
    not_sent                       shift and go to state 28

state 8

    (6) text -> textconstruction .

    OPEN            reduce using rule 6 (text -> textconstruction .)
    $end            reduce using rule 6 (text -> textconstruction .)
    CLOSE           reduce using rule 6 (text -> textconstruction .)


state 9

    (7) text -> domainrestriction .

    OPEN            reduce using rule 7 (text -> domainrestriction .)
    $end            reduce using rule 7 (text -> domainrestriction .)
    CLOSE           reduce using rule 7 (text -> domainrestriction .)


state 10

    (8) text -> importation .

    OPEN            reduce using rule 8 (text -> importation .)
    $end            reduce using rule 8 (text -> importation .)
    CLOSE           reduce using rule 8 (text -> importation .)


state 11

    (9) text -> commenttext .

    OPEN            reduce using rule 9 (text -> commenttext .)
    $end            reduce using rule 9 (text -> commenttext .)
    CLOSE           reduce using rule 9 (text -> commenttext .)


state 12

    (18) statement -> titling .

    OPEN            reduce using rule 18 (statement -> titling .)
    $end            reduce using rule 18 (statement -> titling .)
    CLOSE           reduce using rule 18 (statement -> titling .)


state 13

    (19) statement -> discoursestatement .

    OPEN            reduce using rule 19 (statement -> discoursestatement .)
    $end            reduce using rule 19 (statement -> discoursestatement .)
    CLOSE           reduce using rule 19 (statement -> discoursestatement .)


state 14

    (20) statement -> OPEN . COMMENT QUOTEDSTRING statement CLOSE
    (10) textconstruction -> OPEN . TEXT constructed_texts CLOSE
    (25) domainrestriction -> OPEN . RESTRICT term text CLOSE
    (26) importation -> OPEN . IMPORTS interpretablename CLOSE
    (27) commenttext -> OPEN . COMMENT QUOTEDSTRING texts CLOSE
    (28) commenttext -> OPEN . COMMENT QUOTEDSTRING prefixdeclarations texts CLOSE
    (32) titling -> OPEN . TITLING interpretablename text CLOSE
    (56) existential_quantsent -> OPEN . EXISTS OPEN bvar_list CLOSE sentence CLOSE
    (55) universal_quantsent -> OPEN . FORALL OPEN bvar_list CLOSE sentence CLOSE
    (50) commentsent -> OPEN . COMMENT QUOTEDSTRING sentence CLOSE
    (23) indiscourse -> OPEN . INDISCOURSE terms CLOSE
    (24) outdiscourse -> OPEN . OUTDISCOURSE terms CLOSE
    (53) equation -> OPEN . EQUAL term term CLOSE
    (54) atom -> OPEN . term termseq CLOSE
    (45) and_sent -> OPEN . AND sentences CLOSE
    (46) or_sent -> OPEN . OR sentences CLOSE
    (47) if_sent -> OPEN . IF sentence sentence CLOSE
    (48) iff_sent -> OPEN . IFF sentence sentence CLOSE
    (49) not_sent -> OPEN . NOT sentence CLOSE
    (69) term -> . name
    (70) term -> . OPEN term termseq CLOSE
    (71) term -> . OPEN COMMENT QUOTEDSTRING term CLOSE
    (72) name -> . interpretedname
    (73) name -> . interpretablename
    (74) interpretedname -> . NUMERAL
    (75) interpretedname -> . QUOTEDSTRING
    (76) interpretedname -> . OPEN COMMENT QUOTEDSTRING NUMERAL CLOSE
    (77) interpretedname -> . OPEN COMMENT QUOTEDSTRING QUOTEDSTRING CLOSE
    (78) interpretablename -> . NAMECHARSEQUENCE
    (79) interpretablename -> . ENCLOSEDNAME
    (80) interpretablename -> . OPEN COMMENT QUOTEDSTRING interpretablename CLOSE

    COMMENT         shift and go to state 36
    TEXT            shift and go to state 38
    RESTRICT        shift and go to state 39
    IMPORTS         shift and go to state 41
    TITLING         shift and go to state 43
    EXISTS          shift and go to state 44
    FORALL          shift and go to state 45
    INDISCOURSE     shift and go to state 46
    OUTDISCOURSE    shift and go to state 47
    EQUAL           shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50
    IF              shift and go to state 51
    IFF             shift and go to state 52
    NOT             shift and go to state 53
    OPEN            shift and go to state 35
    NUMERAL         shift and go to state 56
    QUOTEDSTRING    shift and go to state 37
    NAMECHARSEQUENCE shift and go to state 57
    ENCLOSEDNAME    shift and go to state 58

    term                           shift and go to state 40
    interpretablename              shift and go to state 42
    name                           shift and go to state 54
    interpretedname                shift and go to state 55

state 15

    (33) sentence -> atomsent .

    OPEN            reduce using rule 33 (sentence -> atomsent .)
    $end            reduce using rule 33 (sentence -> atomsent .)
    CLOSE           reduce using rule 33 (sentence -> atomsent .)


state 16

    (34) sentence -> boolsent .

    OPEN            reduce using rule 34 (sentence -> boolsent .)
    $end            reduce using rule 34 (sentence -> boolsent .)
    CLOSE           reduce using rule 34 (sentence -> boolsent .)


state 17

    (35) sentence -> existential_quantsent .

    OPEN            reduce using rule 35 (sentence -> existential_quantsent .)
    $end            reduce using rule 35 (sentence -> existential_quantsent .)
    CLOSE           reduce using rule 35 (sentence -> existential_quantsent .)


state 18

    (36) sentence -> universal_quantsent .

    OPEN            reduce using rule 36 (sentence -> universal_quantsent .)
    $end            reduce using rule 36 (sentence -> universal_quantsent .)
    CLOSE           reduce using rule 36 (sentence -> universal_quantsent .)


state 19
